0.5.2b [13/04/2003]
Fixed some configuration files bugs.
Added the gui color parameters in the configuration file.
Catch the --version command line argument.

0.5.1 [11/04/2003]
Added an win32 installer script to use with inno setup.
Succeed compilation on MSYS with MinGW32.
Fixed the seg fault when quiting.
Fixed the fantom planets bug.
Implemented the ClickablePicture ui component to set the position easily by clicking the world map.
Found and eliminate the boring memory leak i knew since months.
Set the gui non-dynamic ie the size in pixel of the windows are fixed.
Fixed the SDL fullscreen bug in linux.
Fixed some gui bugs.
Fixed the timezone +13 bug.
Added a config.h.in file to set the compilation macros. The compilation output is now more readable.
Removed all the bugs that the glut->SDL change created.
Totally stopped the use of the glut library! Use the good SDL library instead. Increase the compatibility with every plateforms especially full screen mode in unix.
Added the CTRL + Up/Down keys to control the zoom.
Removed a lot of warnings which occured during the compilation on some plateforms.

0.5.0 [15/01/2003]
Changed the directories used for configuration files. They are now in $HOME/.stellarium/ for unix systems. --> Unix standard is respected.
Improved the grid class for optimisation.
Removed the stars drawing bug when zooming.
Fixed the fog texture bug (black vertical line) which occured on some plateform.
Added a "current time" button to the time control panel.
Created a new module stelconfig.h/cpp to manage the configuration files and multiplateform options.
Added the CTRL + clic = right clic (usefull for MacOSX users).
Fixed a configure.in problem for MACOSX portability.

0.4.9 [17/10/2002]
Fixed the binary file bug under win32 (just forget a "b" in the file open mode....)
Use the Hipparcos catalog : there are now 120 000 stars (10 000 before).
Added a grid class for spherical star data optimisation. 